--- a/process-1.ipynb
+++ b/process-1.ipynb
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(29168650, 3)\n"
+      "(48159841, 3)\n"
      ]
     },
     {
@@ -109,32 +109,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>65679d473736e72a8f12984d4c42e955</td>\n",
+       "      <td>05f085e5ba961ce715912b6cb4836e96</td>\n",
+       "      <td>phase2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c90b0164d72bd4f00b4c5efb7c216dc5</td>\n",
+       "      <td>33c1a5ee63412996aed098f0a8f01c53</td>\n",
+       "      <td>phase2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>d5945e460d2d63118c6b601c7330e649</td>\n",
+       "      <td>50603e852362bde38fa27ea2c9b7039b</td>\n",
+       "      <td>phase2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>f10da75ad1eaf16eb2ffe0d85b76b332</td>\n",
        "      <td>711ef25bdb2c2421c0131af77b3ede1d</td>\n",
        "      <td>phase1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>4</th>\n",
        "      <td>9ac5a4327bd4f3dcb424c93ca9b84087</td>\n",
        "      <td>2d91c73304c5e8a94a0e5b4956093f71</td>\n",
-       "      <td>phase1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9d91bfd4703e55dd814dfffb3d63fc33</td>\n",
-       "      <td>33d4fdfe3967a1ffde9311bfe6827ef9</td>\n",
-       "      <td>phase1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>e1bdbce05528952ed6579795373782d4</td>\n",
-       "      <td>4bda690abec912b3b7b228b01fb6819a</td>\n",
-       "      <td>phase1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>eb623ac4b10df96835921edabbde2951</td>\n",
-       "      <td>c1a05bdfc88a73bf2830e705b2f39dbb</td>\n",
        "      <td>phase1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -143,11 +143,11 @@
       ],
       "text/plain": [
        "                           paper_id                reference_paper_id   phase\n",
-       "0  f10da75ad1eaf16eb2ffe0d85b76b332  711ef25bdb2c2421c0131af77b3ede1d  phase1\n",
-       "1  9ac5a4327bd4f3dcb424c93ca9b84087  2d91c73304c5e8a94a0e5b4956093f71  phase1\n",
-       "2  9d91bfd4703e55dd814dfffb3d63fc33  33d4fdfe3967a1ffde9311bfe6827ef9  phase1\n",
-       "3  e1bdbce05528952ed6579795373782d4  4bda690abec912b3b7b228b01fb6819a  phase1\n",
-       "4  eb623ac4b10df96835921edabbde2951  c1a05bdfc88a73bf2830e705b2f39dbb  phase1"
+       "0  65679d473736e72a8f12984d4c42e955  05f085e5ba961ce715912b6cb4836e96  phase2\n",
+       "1  c90b0164d72bd4f00b4c5efb7c216dc5  33c1a5ee63412996aed098f0a8f01c53  phase2\n",
+       "2  d5945e460d2d63118c6b601c7330e649  50603e852362bde38fa27ea2c9b7039b  phase2\n",
+       "3  f10da75ad1eaf16eb2ffe0d85b76b332  711ef25bdb2c2421c0131af77b3ede1d  phase1\n",
+       "4  9ac5a4327bd4f3dcb424c93ca9b84087  2d91c73304c5e8a94a0e5b4956093f71  phase1"
       ]
      },
      "execution_count": 4,
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "edge_df = pd.read_csv(link_p1_path)\n",
+    "edge_df = pd.read_csv(link_p2_path)\n",
     "print(edge_df.shape)\n",
     "edge_df.head()"
    ]
@@ -168,9 +168,9 @@
    "outputs": [],
    "source": [
     "# phase2\n",
-    "edge_df2 = pd.read_csv(link_p2_path)\n",
-    "print(edge_df2.shape)\n",
-    "edge_df2.head()"
+    "# edge_df2 = pd.read_csv(link_p2_path)\n",
+    "# print(edge_df2.shape)\n",
+    "# edge_df2.head()"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "outputs": [],
    "source": [
     "# 将phase1和phase2合并组成全图的新变列表\n",
-    "edge_df = pd.concat([edge_df, edge_df2])"
+    "# edge_df = pd.concat([edge_df, edge_df2])"
    ]
   },
   {
@@ -191,8 +191,8 @@
     {
      "data": {
       "text/plain": [
-       "count     29168650\n",
-       "unique           1\n",
+       "count     48159841\n",
+       "unique           2\n",
        "top         phase1\n",
        "freq      29168650\n",
        "Name: phase, dtype: object"
@@ -216,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3031367, 1)\n"
+      "(4372978, 1)\n"
      ]
     },
     {
@@ -246,19 +246,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>f10da75ad1eaf16eb2ffe0d85b76b332</td>\n",
+       "      <td>65679d473736e72a8f12984d4c42e955</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>9ac5a4327bd4f3dcb424c93ca9b84087</td>\n",
+       "      <td>c90b0164d72bd4f00b4c5efb7c216dc5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>9d91bfd4703e55dd814dfffb3d63fc33</td>\n",
+       "      <td>d5945e460d2d63118c6b601c7330e649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>e1bdbce05528952ed6579795373782d4</td>\n",
+       "      <td>f10da75ad1eaf16eb2ffe0d85b76b332</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -266,10 +266,10 @@
       ],
       "text/plain": [
        "                           paper_id\n",
-       "0  f10da75ad1eaf16eb2ffe0d85b76b332\n",
-       "1  9ac5a4327bd4f3dcb424c93ca9b84087\n",
-       "2  9d91bfd4703e55dd814dfffb3d63fc33\n",
-       "3  e1bdbce05528952ed6579795373782d4"
+       "0  65679d473736e72a8f12984d4c42e955\n",
+       "1  c90b0164d72bd4f00b4c5efb7c216dc5\n",
+       "2  d5945e460d2d63118c6b601c7330e649\n",
+       "3  f10da75ad1eaf16eb2ffe0d85b76b332"
       ]
      },
      "execution_count": 6,
@@ -357,7 +357,23 @@
       "Processed 200000 validation rows\n",
       "Processed 300000 validation rows\n",
       "Processed 400000 validation rows\n",
-      "Processed 500000 validation rows\n"
+      "Processed 500000 validation rows\n",
+      "Processed 100000 validation rows\n",
+      "Processed 200000 validation rows\n",
+      "Processed 300000 validation rows\n",
+      "Processed 400000 validation rows\n",
+      "Processed 500000 validation rows\n",
+      "Processed 600000 validation rows\n",
+      "Processed 700000 validation rows\n",
+      "Processed 800000 validation rows\n",
+      "Processed 900000 validation rows\n",
+      "Processed 1000000 validation rows\n",
+      "Processed 1100000 validation rows\n",
+      "Processed 1200000 validation rows\n",
+      "Processed 1300000 validation rows\n",
+      "Processed 1400000 validation rows\n",
+      "Processed 1500000 validation rows\n",
+      "Processed 1600000 validation rows\n"
      ]
     }
    ],
@@ -423,7 +439,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3655033, 4)\n"
+      "(5345753, 4)\n"
      ]
     },
     {
@@ -514,7 +530,7 @@
     {
      "data": {
       "text/plain": [
-       "(3655033,)"
+       "(5345753,)"
       ]
      },
      "execution_count": 10,
@@ -551,7 +567,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3030948, 4)\n"
+      "(4372554, 4)\n"
      ]
     }
    ],
@@ -569,8 +585,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3031367, 4)\n",
-      "共有419边列表的节点在给出的节点列表里没有对应，缺乏特征\n"
+      "(4372978, 4)\n",
+      "共有424边列表的节点在给出的节点列表里没有对应，缺乏特征\n"
      ]
     },
     {
@@ -602,28 +618,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1124</th>\n",
+       "      <th>1911</th>\n",
        "      <td>cc388eaec8838ce383d8a8792014fedb</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1184</th>\n",
+       "      <th>2022</th>\n",
        "      <td>5d899f41e52f751fef843cf7b1d05b4a</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14342</th>\n",
+       "      <th>23867</th>\n",
        "      <td>2b2004ec3c99a44b5cb6045ca547453e</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15803</th>\n",
+       "      <th>26295</th>\n",
        "      <td>d657c4451a9617f4eec96d3b2e6092c7</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -635,10 +651,10 @@
       ],
       "text/plain": [
        "                               paper_id  node_idx Label  Split_ID\n",
-       "1124   cc388eaec8838ce383d8a8792014fedb       NaN   NaN       NaN\n",
-       "1184   5d899f41e52f751fef843cf7b1d05b4a       NaN   NaN       NaN\n",
-       "14342  2b2004ec3c99a44b5cb6045ca547453e       NaN   NaN       NaN\n",
-       "15803  d657c4451a9617f4eec96d3b2e6092c7       NaN   NaN       NaN"
+       "1911   cc388eaec8838ce383d8a8792014fedb       NaN   NaN       NaN\n",
+       "2022   5d899f41e52f751fef843cf7b1d05b4a       NaN   NaN       NaN\n",
+       "23867  2b2004ec3c99a44b5cb6045ca547453e       NaN   NaN       NaN\n",
+       "26295  d657c4451a9617f4eec96d3b2e6092c7       NaN   NaN       NaN"
       ]
      },
      "execution_count": 12,
@@ -714,28 +730,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3655033</td>\n",
+       "      <td>5345753</td>\n",
        "      <td>cc388eaec8838ce383d8a8792014fedb</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3655034</td>\n",
+       "      <td>5345754</td>\n",
        "      <td>5d899f41e52f751fef843cf7b1d05b4a</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3655035</td>\n",
+       "      <td>5345755</td>\n",
        "      <td>2b2004ec3c99a44b5cb6045ca547453e</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3655036</td>\n",
+       "      <td>5345756</td>\n",
        "      <td>d657c4451a9617f4eec96d3b2e6092c7</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
@@ -746,10 +762,10 @@
       ],
       "text/plain": [
        "   node_idx                          paper_id Label  Split_ID\n",
-       "0   3655033  cc388eaec8838ce383d8a8792014fedb   NaN         1\n",
-       "1   3655034  5d899f41e52f751fef843cf7b1d05b4a   NaN         1\n",
-       "2   3655035  2b2004ec3c99a44b5cb6045ca547453e   NaN         1\n",
-       "3   3655036  d657c4451a9617f4eec96d3b2e6092c7   NaN         1"
+       "0   5345753  cc388eaec8838ce383d8a8792014fedb   NaN         1\n",
+       "1   5345754  5d899f41e52f751fef843cf7b1d05b4a   NaN         1\n",
+       "2   5345755  2b2004ec3c99a44b5cb6045ca547453e   NaN         1\n",
+       "3   5345756  d657c4451a9617f4eec96d3b2e6092c7   NaN         1"
       ]
      },
      "execution_count": 13,
@@ -765,7 +781,7 @@
     "diff_nodes.node_idx = 0\n",
     "diff_nodes.reset_index(inplace=True)\n",
     "diff_nodes.drop(['index'], axis=1, inplace=True)\n",
-    "diff_nodes.node_idx = diff_nodes.node_idx + diff_nodes.index + 3655033  # 3655033需要换成ids.shape[0]的值\n",
+    "diff_nodes.node_idx = diff_nodes.node_idx + diff_nodes.index + 5345753 # 655033  # 3655033需要换成ids.shape[0]的值\n",
     "diff_nodes = diff_nodes[['node_idx', 'paper_id', 'Label', 'Split_ID']]\n",
     "diff_nodes.head(4)"
    ]
@@ -804,29 +820,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>415</th>\n",
-       "      <td>3655448</td>\n",
+       "      <th>420</th>\n",
+       "      <td>5346173</td>\n",
        "      <td>caed47d55d1e193ecb1fa97a415c13dd</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>416</th>\n",
-       "      <td>3655449</td>\n",
+       "      <th>421</th>\n",
+       "      <td>5346174</td>\n",
        "      <td>c82eb6be79a245392fb626b9a7e1f246</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>417</th>\n",
-       "      <td>3655450</td>\n",
+       "      <th>422</th>\n",
+       "      <td>5346175</td>\n",
        "      <td>926a31f6b378575204aae30b5dfa6dd3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>418</th>\n",
-       "      <td>3655451</td>\n",
+       "      <th>423</th>\n",
+       "      <td>5346176</td>\n",
        "      <td>bbace2419c3f827158ea4602f3eb35fa</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
@@ -837,10 +853,10 @@
       ],
       "text/plain": [
        "     node_idx                          paper_id Label  Split_ID\n",
-       "415   3655448  caed47d55d1e193ecb1fa97a415c13dd   NaN         1\n",
-       "416   3655449  c82eb6be79a245392fb626b9a7e1f246   NaN         1\n",
-       "417   3655450  926a31f6b378575204aae30b5dfa6dd3   NaN         1\n",
-       "418   3655451  bbace2419c3f827158ea4602f3eb35fa   NaN         1"
+       "420   5346173  caed47d55d1e193ecb1fa97a415c13dd   NaN         1\n",
+       "421   5346174  c82eb6be79a245392fb626b9a7e1f246   NaN         1\n",
+       "422   5346175  926a31f6b378575204aae30b5dfa6dd3   NaN         1\n",
+       "423   5346176  bbace2419c3f827158ea4602f3eb35fa   NaN         1"
       ]
      },
      "execution_count": 14,
@@ -849,7 +865,7 @@
     }
    ],
    "source": [
-    "# Concatenate这419个未匹配到的节点到总的node的最后，从而让nid能接上\n",
+    "# Concatenate这424个未匹配到的节点到总的node的最后，从而让nid能接上\n",
     "nid_label_df = pd.concat([nid_label_df, diff_nodes])\n",
     "nid_label_df.tail(4)"
    ]
