--- a/process-2.ipynb
+++ b/process-2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -107,7 +107,23 @@
       "Processed 200000 validation rows\n",
       "Processed 300000 validation rows\n",
       "Processed 400000 validation rows\n",
-      "Processed 500000 validation rows\n"
+      "Processed 500000 validation rows\n",
+      "Processed 100000 validation rows\n",
+      "Processed 200000 validation rows\n",
+      "Processed 300000 validation rows\n",
+      "Processed 400000 validation rows\n",
+      "Processed 500000 validation rows\n",
+      "Processed 600000 validation rows\n",
+      "Processed 700000 validation rows\n",
+      "Processed 800000 validation rows\n",
+      "Processed 900000 validation rows\n",
+      "Processed 1000000 validation rows\n",
+      "Processed 1100000 validation rows\n",
+      "Processed 1200000 validation rows\n",
+      "Processed 1300000 validation rows\n",
+      "Processed 1400000 validation rows\n",
+      "Processed 1500000 validation rows\n",
+      "Processed 1600000 validation rows\n"
      ]
     }
    ],
@@ -159,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +184,7 @@
        "21"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,27 +197,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 给未匹配上的419个节点造300维的特征，这里用其他所有节点的300维的平均值来作为他们的特征\n",
+    "# 给未匹配上的424个节点造300维的特征，这里用其他所有节点的300维的平均值来作为他们的特征\n",
     "# 更好的方法是用每个节点的所有邻居的特征的平均，这里就不搞这么复杂了。\n",
-    "diff_node_feat_arr = np.tile(np.mean(feat_arr, axis=0),(419, 1))  # 具体是不是419，还要看 1 里面的缺失特征的节点是多少"
+    "diff_node_feat_arr = np.tile(np.mean(feat_arr, axis=0),(424, 1))  # 具体是不是419，还要看 1 里面的缺失特征的节点是多少"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3655452, 300)"
+       "(5346177, 300)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
