--- a/process-3.ipynb
+++ b/process-3.ipynb
@@ -11,17 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using backend: pytorch\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -32,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3655452, 4)\n"
+      "(5346177, 4)\n"
      ]
     },
     {
@@ -94,29 +86,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3655448</th>\n",
-       "      <td>3655448</td>\n",
+       "      <th>5346173</th>\n",
+       "      <td>5346173</td>\n",
        "      <td>caed47d55d1e193ecb1fa97a415c13dd</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3655449</th>\n",
-       "      <td>3655449</td>\n",
+       "      <th>5346174</th>\n",
+       "      <td>5346174</td>\n",
        "      <td>c82eb6be79a245392fb626b9a7e1f246</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3655450</th>\n",
-       "      <td>3655450</td>\n",
+       "      <th>5346175</th>\n",
+       "      <td>5346175</td>\n",
        "      <td>926a31f6b378575204aae30b5dfa6dd3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3655451</th>\n",
-       "      <td>3655451</td>\n",
+       "      <th>5346176</th>\n",
+       "      <td>5346176</td>\n",
        "      <td>bbace2419c3f827158ea4602f3eb35fa</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
@@ -127,13 +119,13 @@
       ],
       "text/plain": [
        "         node_idx                          paper_id Label  Split_ID\n",
-       "3655448   3655448  caed47d55d1e193ecb1fa97a415c13dd   NaN         1\n",
-       "3655449   3655449  c82eb6be79a245392fb626b9a7e1f246   NaN         1\n",
-       "3655450   3655450  926a31f6b378575204aae30b5dfa6dd3   NaN         1\n",
-       "3655451   3655451  bbace2419c3f827158ea4602f3eb35fa   NaN         1"
+       "5346173   5346173  caed47d55d1e193ecb1fa97a415c13dd   NaN         1\n",
+       "5346174   5346174  c82eb6be79a245392fb626b9a7e1f246   NaN         1\n",
+       "5346175   5346175  926a31f6b378575204aae30b5dfa6dd3   NaN         1\n",
+       "5346176   5346176  bbace2419c3f827158ea4602f3eb35fa   NaN         1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(29168650, 3)\n"
+      "(48159841, 3)\n"
      ]
     },
     {
@@ -282,32 +274,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>65679d473736e72a8f12984d4c42e955</td>\n",
+       "      <td>05f085e5ba961ce715912b6cb4836e96</td>\n",
+       "      <td>phase2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c90b0164d72bd4f00b4c5efb7c216dc5</td>\n",
+       "      <td>33c1a5ee63412996aed098f0a8f01c53</td>\n",
+       "      <td>phase2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>d5945e460d2d63118c6b601c7330e649</td>\n",
+       "      <td>50603e852362bde38fa27ea2c9b7039b</td>\n",
+       "      <td>phase2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>f10da75ad1eaf16eb2ffe0d85b76b332</td>\n",
        "      <td>711ef25bdb2c2421c0131af77b3ede1d</td>\n",
        "      <td>phase1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>4</th>\n",
        "      <td>9ac5a4327bd4f3dcb424c93ca9b84087</td>\n",
        "      <td>2d91c73304c5e8a94a0e5b4956093f71</td>\n",
-       "      <td>phase1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9d91bfd4703e55dd814dfffb3d63fc33</td>\n",
-       "      <td>33d4fdfe3967a1ffde9311bfe6827ef9</td>\n",
-       "      <td>phase1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>e1bdbce05528952ed6579795373782d4</td>\n",
-       "      <td>4bda690abec912b3b7b228b01fb6819a</td>\n",
-       "      <td>phase1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>eb623ac4b10df96835921edabbde2951</td>\n",
-       "      <td>c1a05bdfc88a73bf2830e705b2f39dbb</td>\n",
        "      <td>phase1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -316,20 +308,20 @@
       ],
       "text/plain": [
        "                           paper_id                reference_paper_id   phase\n",
-       "0  f10da75ad1eaf16eb2ffe0d85b76b332  711ef25bdb2c2421c0131af77b3ede1d  phase1\n",
-       "1  9ac5a4327bd4f3dcb424c93ca9b84087  2d91c73304c5e8a94a0e5b4956093f71  phase1\n",
-       "2  9d91bfd4703e55dd814dfffb3d63fc33  33d4fdfe3967a1ffde9311bfe6827ef9  phase1\n",
-       "3  e1bdbce05528952ed6579795373782d4  4bda690abec912b3b7b228b01fb6819a  phase1\n",
-       "4  eb623ac4b10df96835921edabbde2951  c1a05bdfc88a73bf2830e705b2f39dbb  phase1"
+       "0  65679d473736e72a8f12984d4c42e955  05f085e5ba961ce715912b6cb4836e96  phase2\n",
+       "1  c90b0164d72bd4f00b4c5efb7c216dc5  33c1a5ee63412996aed098f0a8f01c53  phase2\n",
+       "2  d5945e460d2d63118c6b601c7330e649  50603e852362bde38fa27ea2c9b7039b  phase2\n",
+       "3  f10da75ad1eaf16eb2ffe0d85b76b332  711ef25bdb2c2421c0131af77b3ede1d  phase1\n",
+       "4  9ac5a4327bd4f3dcb424c93ca9b84087  2d91c73304c5e8a94a0e5b4956093f71  phase1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "edges_df = pd.read_csv(link_p1_path)\n",
+    "edges_df = pd.read_csv(link_p2_path)\n",
     "print(edges_df.shape)\n",
     "edges_df.head()"
    ]
@@ -341,9 +333,9 @@
    "outputs": [],
    "source": [
     "# phase2\n",
-    "edges_df2 = pd.read_csv(link_p2_path)\n",
-    "print(edges_df2.shape)\n",
-    "edges_df2.head()"
+    "# edges_df2 = pd.read_csv(link_p2_path)\n",
+    "# print(edges_df2.shape)\n",
+    "# edges_df2.head()"
    ]
   },
   {
@@ -353,7 +345,7 @@
    "outputs": [],
    "source": [
     "# concat phase1 and phase2\n",
-    "edges_df = pd.concat([edges_df, edges_df2])"
+    "# edges_df = pd.concat([edges_df, edges_df2])"
    ]
   },
   {
@@ -367,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(29168650, 10)\n"
+      "(48159841, 10)\n"
      ]
     },
     {
@@ -413,6 +405,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>65679d473736e72a8f12984d4c42e955</td>\n",
+       "      <td>05f085e5ba961ce715912b6cb4836e96</td>\n",
+       "      <td>phase2</td>\n",
+       "      <td>3926192</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>985918</td>\n",
+       "      <td>05f085e5ba961ce715912b6cb4836e96</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>c90b0164d72bd4f00b4c5efb7c216dc5</td>\n",
+       "      <td>33c1a5ee63412996aed098f0a8f01c53</td>\n",
+       "      <td>phase2</td>\n",
+       "      <td>3790465</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1188633</td>\n",
+       "      <td>33c1a5ee63412996aed098f0a8f01c53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>d5945e460d2d63118c6b601c7330e649</td>\n",
+       "      <td>50603e852362bde38fa27ea2c9b7039b</td>\n",
+       "      <td>phase2</td>\n",
+       "      <td>4780332</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3503589</td>\n",
+       "      <td>50603e852362bde38fa27ea2c9b7039b</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>f10da75ad1eaf16eb2ffe0d85b76b332</td>\n",
        "      <td>711ef25bdb2c2421c0131af77b3ede1d</td>\n",
        "      <td>phase1</td>\n",
@@ -424,70 +455,31 @@
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>9ac5a4327bd4f3dcb424c93ca9b84087</td>\n",
-       "      <td>2d91c73304c5e8a94a0e5b4956093f71</td>\n",
-       "      <td>phase1</td>\n",
-       "      <td>410481</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>384023</td>\n",
-       "      <td>2d91c73304c5e8a94a0e5b4956093f71</td>\n",
-       "      <td>K</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9d91bfd4703e55dd814dfffb3d63fc33</td>\n",
-       "      <td>33d4fdfe3967a1ffde9311bfe6827ef9</td>\n",
-       "      <td>phase1</td>\n",
-       "      <td>2196044</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1895619</td>\n",
-       "      <td>33d4fdfe3967a1ffde9311bfe6827ef9</td>\n",
-       "      <td>N</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>e1bdbce05528952ed6579795373782d4</td>\n",
-       "      <td>4bda690abec912b3b7b228b01fb6819a</td>\n",
-       "      <td>phase1</td>\n",
-       "      <td>2545623</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2175977</td>\n",
-       "      <td>4bda690abec912b3b7b228b01fb6819a</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                         paper_id_x                reference_paper_id   phase  \\\n",
-       "0  f10da75ad1eaf16eb2ffe0d85b76b332  711ef25bdb2c2421c0131af77b3ede1d  phase1   \n",
-       "1  9ac5a4327bd4f3dcb424c93ca9b84087  2d91c73304c5e8a94a0e5b4956093f71  phase1   \n",
-       "2  9d91bfd4703e55dd814dfffb3d63fc33  33d4fdfe3967a1ffde9311bfe6827ef9  phase1   \n",
-       "3  e1bdbce05528952ed6579795373782d4  4bda690abec912b3b7b228b01fb6819a  phase1   \n",
+       "0  65679d473736e72a8f12984d4c42e955  05f085e5ba961ce715912b6cb4836e96  phase2   \n",
+       "1  c90b0164d72bd4f00b4c5efb7c216dc5  33c1a5ee63412996aed098f0a8f01c53  phase2   \n",
+       "2  d5945e460d2d63118c6b601c7330e649  50603e852362bde38fa27ea2c9b7039b  phase2   \n",
+       "3  f10da75ad1eaf16eb2ffe0d85b76b332  711ef25bdb2c2421c0131af77b3ede1d  phase1   \n",
        "\n",
        "   node_idx_x Label_x  Split_ID_x  node_idx_y  \\\n",
-       "0      529879     NaN           0     2364950   \n",
-       "1      410481       D           0      384023   \n",
-       "2     2196044       D           0     1895619   \n",
-       "3     2545623     NaN           0     2175977   \n",
+       "0     3926192     NaN           1      985918   \n",
+       "1     3790465     NaN           1     1188633   \n",
+       "2     4780332     NaN           1     3503589   \n",
+       "3      529879     NaN           0     2364950   \n",
        "\n",
        "                         paper_id_y Label_y  Split_ID_y  \n",
-       "0  711ef25bdb2c2421c0131af77b3ede1d     NaN           0  \n",
-       "1  2d91c73304c5e8a94a0e5b4956093f71       K           0  \n",
-       "2  33d4fdfe3967a1ffde9311bfe6827ef9       N           0  \n",
-       "3  4bda690abec912b3b7b228b01fb6819a     NaN           0  "
+       "0  05f085e5ba961ce715912b6cb4836e96     NaN           0  \n",
+       "1  33c1a5ee63412996aed098f0a8f01c53     NaN           0  \n",
+       "2  50603e852362bde38fa27ea2c9b7039b     NaN           1  \n",
+       "3  711ef25bdb2c2421c0131af77b3ede1d     NaN           0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -543,31 +535,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>3926192</td>\n",
+       "      <td>985918</td>\n",
+       "      <td>65679d473736e72a8f12984d4c42e955</td>\n",
+       "      <td>05f085e5ba961ce715912b6cb4836e96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3790465</td>\n",
+       "      <td>1188633</td>\n",
+       "      <td>c90b0164d72bd4f00b4c5efb7c216dc5</td>\n",
+       "      <td>33c1a5ee63412996aed098f0a8f01c53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4780332</td>\n",
+       "      <td>3503589</td>\n",
+       "      <td>d5945e460d2d63118c6b601c7330e649</td>\n",
+       "      <td>50603e852362bde38fa27ea2c9b7039b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>529879</td>\n",
        "      <td>2364950</td>\n",
        "      <td>f10da75ad1eaf16eb2ffe0d85b76b332</td>\n",
        "      <td>711ef25bdb2c2421c0131af77b3ede1d</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>410481</td>\n",
-       "      <td>384023</td>\n",
-       "      <td>9ac5a4327bd4f3dcb424c93ca9b84087</td>\n",
-       "      <td>2d91c73304c5e8a94a0e5b4956093f71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2196044</td>\n",
-       "      <td>1895619</td>\n",
-       "      <td>9d91bfd4703e55dd814dfffb3d63fc33</td>\n",
-       "      <td>33d4fdfe3967a1ffde9311bfe6827ef9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2545623</td>\n",
-       "      <td>2175977</td>\n",
-       "      <td>e1bdbce05528952ed6579795373782d4</td>\n",
-       "      <td>4bda690abec912b3b7b228b01fb6819a</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -575,19 +567,19 @@
       ],
       "text/plain": [
        "   src_nid  dst_nid                          paper_id  \\\n",
-       "0   529879  2364950  f10da75ad1eaf16eb2ffe0d85b76b332   \n",
-       "1   410481   384023  9ac5a4327bd4f3dcb424c93ca9b84087   \n",
-       "2  2196044  1895619  9d91bfd4703e55dd814dfffb3d63fc33   \n",
-       "3  2545623  2175977  e1bdbce05528952ed6579795373782d4   \n",
+       "0  3926192   985918  65679d473736e72a8f12984d4c42e955   \n",
+       "1  3790465  1188633  c90b0164d72bd4f00b4c5efb7c216dc5   \n",
+       "2  4780332  3503589  d5945e460d2d63118c6b601c7330e649   \n",
+       "3   529879  2364950  f10da75ad1eaf16eb2ffe0d85b76b332   \n",
        "\n",
        "                 reference_paper_id  \n",
-       "0  711ef25bdb2c2421c0131af77b3ede1d  \n",
-       "1  2d91c73304c5e8a94a0e5b4956093f71  \n",
-       "2  33d4fdfe3967a1ffde9311bfe6827ef9  \n",
-       "3  4bda690abec912b3b7b228b01fb6819a  "
+       "0  05f085e5ba961ce715912b6cb4836e96  \n",
+       "1  33c1a5ee63412996aed098f0a8f01c53  \n",
+       "2  50603e852362bde38fa27ea2c9b7039b  \n",
+       "3  711ef25bdb2c2421c0131af77b3ede1d  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,14 +610,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Graph(num_nodes=3655452, num_edges=29168650,\n",
+      "Graph(num_nodes=5346177, num_edges=48159841,\n",
       "      ndata_schemes={}\n",
       "      edata_schemes={})\n"
      ]
@@ -639,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
